--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -2,5 +2,6 @@
   background-color: lightblue;
   display: flex;
   justify-content: space-around;
+  border-bottom: 2px solid black;
   padding: 20px;
 }
