--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,12 @@
 a:hover {
   cursor: pointer;
 }
+.app {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+.content {
+  flex-grow: 1;
+  padding: 5px;
+}
