--- a/src/pages/myRecipes/myRecipes.css
+++ b/src/pages/myRecipes/myRecipes.css
@@ -1,3 +1,13 @@
-.myrecipes-container {
+.myrecipe-container {
   background-color: rgb(247, 195, 98);
+  height: 100%;
+}
+.myrecipe-header {
+  background-color: rgb(165, 240, 165);
+}
+.myrecipe-category {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
