--- a/src/components/MyRecipesList/myRecipesList.css
+++ b/src/components/MyRecipesList/myRecipesList.css
@@ -1,4 +1,7 @@
 .myrecipeslist-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  width: 90%;
+  /* flex-wrap: wrap; */
 }
