--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,8 @@ a:hover {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  width: 100vw;
 }
 .content {
   flex-grow: 1;
-  padding: 5px;
 }
