--- a/src/components/MyRecipe/myRecipe.css
+++ b/src/components/MyRecipe/myRecipe.css
@@ -8,7 +8,7 @@
   width: 100%;
   border: 2px solid black;
   border-radius: 3px;
-  margin: 5px 0 0 0;
+  margin: 10px 0 0 0;
   padding: 10px;
 }
 /************** Top **************/
@@ -59,4 +59,16 @@
 .myrecipe-bottom li {
   font-size: 18px;
   margin: 5px;
+}
+/*************** iPad Air (820x1180) ****************/
+@media (min-width: 820px) {
+  .myrecipe-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: calc(50% - 34px);
+    border: 2px solid black;
+    margin: 10px 5px 0;
+    padding: 10px;
+  }
 }
