--- a/src/components/MyRecipeHeader/myRecipeHeader.css
+++ b/src/components/MyRecipeHeader/myRecipeHeader.css
@@ -1,11 +1,11 @@
 .myrecipe-header {
   background-color: var(--blue);
-  max-width: 500px;
+  max-width: 800px;
   width: 90%;
   border: 2px solid black;
   border-radius: 3px;
   padding: 10px;
-  margin: 5px 0 0 0;
+  margin: 10px 0 0 0;
 }
 .myrecipe-category {
   margin: 10px 0 0 0;
@@ -14,5 +14,7 @@
 @media (min-width: 820px) {
   .myrecipe-header {
     background-color: pink;
+    padding: 20px;
+    margin: 20px 0 0 0;
   }
 }
