--- a/src/components/MyRecipesList/myRecipesList.css
+++ b/src/components/MyRecipesList/myRecipesList.css
@@ -3,5 +3,14 @@
   flex-direction: column;
   align-items: center;
   width: 90%;
-  /* flex-wrap: wrap; */
+}
+/*************** iPad Air (820x1180) ****************/
+@media (min-width: 820px) {
+  .myrecipeslist-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: calc(95% + 10px);
+    max-width: 850px;
+    margin: 20px 0 0 0;
+  }
 }
