--- a/src/pages/myRecipes/myRecipesPage.css
+++ b/src/pages/myRecipes/myRecipesPage.css
@@ -5,3 +5,10 @@
   height: 100%;
   margin: 5px 0 0 0;
 }
+/*************** iPad Air (820x1180) ****************/
+@media (min-width: 820px) {
+  .myrecipe-container {
+    height: 100%;
+    margin: 5px 0 0 0;
+  }
+}
