--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -5,3 +5,10 @@
   border-bottom: 2px solid black;
   padding: 20px;
 }
+/*************** iPad Air (820x1180) ****************/
+@media (min-width: 820px) {
+  .nav-container {
+    border-bottom: 2px solid black;
+    font-size: 25px;
+  }
+}
