--- a/src/components/MyRecipeHeader/myRecipeHeader.css
+++ b/src/components/MyRecipeHeader/myRecipeHeader.css
@@ -10,11 +10,17 @@
 .myrecipe-category {
   margin: 10px 0 0 0;
 }
-/*************** iPad Air (820x1180) ****************/
+/*************** iPad Air ****************/
 @media (min-width: 820px) {
   .myrecipe-header {
     max-width: 800px;
     padding: 20px;
     margin: 20px 0 0 0;
+  }
+}
+/*************** Desktop ****************/
+@media (min-width: 1200px) {
+  .myrecipe-header {
+    max-width: 90%;
   }
 }
