--- a/src/pages/myRecipesPage/myRecipesPage.css
+++ b/src/pages/myRecipesPage/myRecipesPage.css
@@ -5,10 +5,13 @@
   height: 100%;
   margin: 5px 0 0 0;
 }
-/*************** iPad Air (820x1180) ****************/
+/*************** iPad Air ****************/
 @media (min-width: 820px) {
+
+}
+/*************** Desktop ****************/
+@media (min-width: 1200px) {
   .myrecipe-container {
-    height: 100%;
-    margin: 5px 0 0 0;
+    background-color: blue;
   }
 }
