--- a/src/components/MyRecipeItem/myRecipeItem.css
+++ b/src/components/MyRecipeItem/myRecipeItem.css
@@ -60,13 +60,25 @@
   font-size: 18px;
   margin: 5px;
 }
-/*************** iPad Air (820x1180) ****************/
+/*************** iPad Air ****************/
 @media (min-width: 820px) {
   .myrecipe-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     width: calc(50% - 34px);
+    border: 2px solid black;
+    margin: 10px 5px 0;
+    padding: 10px;
+  }
+}
+/*************** Desktop ****************/
+@media (min-width: 1200px) {
+  .myrecipe-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: calc(33.33% - 34px);
     border: 2px solid black;
     margin: 10px 5px 0;
     padding: 10px;
