Testing for responsive design complete, may remove image

--- a/src/components/Test/test.css
+++ b/src/components/Test/test.css
@@ -27,9 +27,49 @@
 }
 .item {
   background-color: peru;
+  display: flex;
+  flex-direction: column;
+  height: 150px;
   border: 2px solid black;
+  border-radius: 3px;
   padding: 5px;
   margin: 2px 10px;
+}
+.item-top {
+  /* background-color: lightblue; */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-grow: 1;
+}
+.item-middle {
+  /* background-color: yellow; */
+  display: flex;
+  flex-grow: 3;
+}
+.item-middle img {
+  /* height: 100px; */
+  width: 30%;
+  object-fit: contain;
+  object-position: center;
+}
+.item-middle p {
+  font-size: 18px;
+  padding: 5px;
+}
+.item-bottom {
+  /* background-color: red; */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-grow: 1;
+}
+.item-bottom-wrapper {
+  /* background-color: #fff; */
+  display:flex;
+}
+.item-bottom-wrapper p {
+  padding: 0 5px;
 }
 /*************** iPad ****************/
 @media (min-width: 820px) {
