--- a/src/components/MyRecipes/myrecipes.css
+++ b/src/components/MyRecipes/myrecipes.css
@@ -1,62 +1,30 @@
 .page-wrapper {
-  background-color: whitesmoke;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  background-color: var(--white);
   height: 100%;
   width: 100vw;
 }
 .header-wrapper {
   background-color: lightblue;
   width: calc(95% - 34px);
-  border: 2px solid black;
-  padding: 5px;
   margin-top: 20px;
 }
 .list-wrapper {
-  display: flex;
-  flex-wrap: wrap;
   width: 95%;
   padding: 10px 0 ;
 }
 .item-wrapper {
-  margin-top: 10px;
   flex: 0 0 100%;
+  margin-top: 10px;
 }
 .item {
   background-color: lightblue;
-  display: flex;
-  flex-direction: column;
   height: 150px;
-  border: 2px solid black;
-  border-radius: 3px;
-  padding: 5px;
   margin: 2px 10px;
 }
-.item-top {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-grow: 1;
-}
-.item-middle {
-  display: flex;
-  flex-grow: 3;
-}
-.item-middle p {
+.description {
   font-size: 18px;
-  padding: 5px;
 }
-.item-bottom {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-grow: 1;
-}
-.item-bottom-wrapper {
-  display:flex;
-}
-.item-bottom-wrapper p {
+.categories p {
   padding: 0 5px;
 }
 /*************** iPad ****************/
