--- a/src/components/Recipe/recipe.css
+++ b/src/components/Recipe/recipe.css
@@ -12,11 +12,27 @@
 .time-wrapper {
   width: 100%;
 }
-.categories p {
-  padding: 0 5px;
+.time-clock {
+  font-size: 4vw;
+}
+.time-number {
+  font-size: 4vw;
+}
+.list-item {
+  font-size: 3vw;
+}
+.recipe-name {
+  font-size: 8vw;
+}
+.item-info {
+  width: 90%;
+  font-size: 5vw;
 }
 .author {
   width: 100%;
+}
+.author p {
+  font-size: 3vw;
 }
 
 /* Details */
