--- a/src/components/MyRecipes/myrecipes.css
+++ b/src/components/MyRecipes/myrecipes.css
@@ -1,7 +1,7 @@
 .page {
   background-color: var(--white);
-  height: 100%;
-  width: 100vw;
+  /* height: 100%; */
+  /* width: 100vw; */
 }
 .header {
   background-color: lightblue;
