Responsive styles for ingredients component

--- a/src/components/Recipe/recipe.css
+++ b/src/components/Recipe/recipe.css
@@ -20,10 +20,15 @@
   .details {
     flex-direction: row;
   }
+  .ingredients-wrapper {
+    flex: 0 0 33.333333%;
+  }
   .preparations-wrapper {
     margin-top: 0;
+    flex: 0 0 33.333333%;
   }
   .instructions-wrapper {
     margin-top: 0;
+    flex: 0 0 33.333333%;
   }
 }
