--- a/src/components/Recipe/recipe.css
+++ b/src/components/Recipe/recipe.css
@@ -1,15 +1,13 @@
 .recipe {
-  max-width: 1200px;
+  max-width: 800px;
 }
+.detail {
+  max-width: 814px;
+}
+
 .details {
   flex-direction: column;
 }
-/* .preparations-wrapper {
-  margin-top: 5px;
-}
-.instructions-wrapper {
-  margin-top: 5px;
-} */
 /***************** iPad ******************/
 @media (min-width: 820px) {
 
@@ -24,11 +22,9 @@
     flex: 0 0 33.333333%;
   }
   .preparations-wrapper {
-    margin-top: 0;
     flex: 0 0 33.333333%;
   }
   .instructions-wrapper {
-    margin-top: 0;
     flex: 0 0 33.333333%;
   }
 }
