--- a/src/components/MyRecipes/myrecipes.css
+++ b/src/components/MyRecipes/myrecipes.css
@@ -1,12 +1,7 @@
-.page {
-  background-color: var(--white);
-  /* height: 100%; */
-  /* width: 100vw; */
-}
 .header {
-  background-color: lightblue;
-  width: calc(95% - 34px);
-  margin-top: 20px;
+  /* background-color: lightblue; */
+  /* width: calc(95% - 34px);
+  margin-top: 20px; */
 }
 .list {
   width: 95%;
