--- a/src/components/Recipe/recipe.css
+++ b/src/components/Recipe/recipe.css
@@ -8,6 +8,18 @@
   flex-direction: column;
   max-width: 1600px;
 }
+
+/* Font Sizes */
+.font-10 {
+  font-size: 100%;
+}
+.font-8 {
+  font-size: 8%;
+}
+.font-6 {
+  font-size: 6%;
+}
+
 /*************** Desktop ****************/
 @media (min-width: 1200px) {
   .details {
